--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="container">
+		<h1 role="heading">Accessible Portfolio</h1>
+		<nav id="navbar" role="navigation">
+			<a href="#home">HOME</a>
+			<a href="#about">ABOUT</a>
+			<a href="#contact">Contact</a>
+	        <a href="#login">Login</a>
+			<a href="#signup">SIGNUP</a>
+		</nav>
+		<img role="img" src="https://miro.medium.com/v2/resize:fit:828/format:webp/1*Cc2TFtAypgj_CnypYfvouw.jpeg" alt="image not found">
+		<p>Accessibility in digital design isn’t just about ticking boxes on a compliance checklist — it’s about ensuring that every user, regardless of their abilities, can access and interact with digital content. This includes users with visual, auditory, cognitive, motor, and other types of disabilities. For me, this isn’t just professional; it’s personal. My own experiences with visual impairment have heightened my awareness, but they’ve also opened my eyes to the broader spectrum of accessibility needs. When I decided to audit my own portfolio, the stakes felt especially high because I wanted carrusel.io to be truly inclusive for all users.</p>
+		<h4>Automated Tools:</h4>
+		<ul role="list">
+			<li role="listitem"><b>WAVE Evaluation Tool:</b> Quickly identified accessibility errors and alerts with visual feedback.</li>
+			<li role="listitem"><b>Web Developer Tool:</b>Real-time inspection and modification of web pages to detect accessibility issues.</li>
+			<li role="listitem"><b>Color Contrast Analyser:</b> Verified color contrast according to WCAG guidelines.</li>
+		</ul>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
